--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 </a>
             </p>
             </br>
-            <a>Project Homepage</a>&nbsp;&nbsp;<a>About</a>
+            <a href = "https://github.com/SdtElectronics/Huffman-Code-Generator">Project Homepage</a>
+            &nbsp;&nbsp;
+            <a>About</a>
         </footer>
     </div>
 </body> 
