--- a/index.html
+++ b/index.html
@@ -48,8 +48,19 @@
             </br>
             <a href = "https://github.com/SdtElectronics/Huffman-Code-Generator">Project Homepage</a>
             &nbsp;&nbsp;
-            <a>About</a>
+            <a id = "abbtn">About</a>
         </footer>
+    </div>
+    <div id = "aboutCont">
+        <div id = "about">
+            <h3>About</h3>
+            <hr/>
+            <p>Copyright © 2020 SdtElectronics</p>
+            <p>All Rights Reserved.</p>
+            <p>version: 0.0.1 alpha 0</p>
+            <p>Powered by WebAssembly and Emscripten.</p>
+            <img src = "res/magic.png"/>
+        </div>
     </div>
 </body> 
 
