--- a/index.html
+++ b/index.html
@@ -3,73 +3,18 @@
 <head> 
     <meta charset="UTF-8"> 
     <title>Huffman Code Generator</title> 
-    <link rel = "stylesheet" href="./style.css"/> 
 
 </head> 
-
+<script>
+    (()=>{
+        window.location.href = 
+        (a => (/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(a) || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0, 4))))(navigator.userAgent || navigator.vendor || window.opera)
+        ? "mob.html" : "PC.html";
+    })();
+</script>
 <body> 
-    <div id = "cont">
-        <div id = "head">
-            <p id = "tt">Huffman Code <br/> Generator</p>
-            <p id = "pw">Powered by</p>
-            <img src="res/WAbanner.jpg"/>
-        </div>
-        
-        <div class = "in">
-            <span contenteditable = false class = "inTitile">Symbols:</span>
-            <span id = "symsIn" class = "inText" contentEditable = "true" placeholder = "e.g: 1, 0 or 2, 1, 0">
-                1, 0
-            </span>
-        </div>
-        <div class = "in">
-            <span contenteditable = false class = "inTitile">Probabilities:</span>
-            <span id = "probIn" class = "inText" contentEditable = "true" placeholder = "e.g: 0.5, 0.3, 0.2"></span>
-        </div>
-        <div id = "gen" class = "btn">
-            <p>Generate</p>
-        </div>
-        <div id = "out">
-
-        </div>
-        <div id = "cls" class = "btn">
-            <p>Clear</p>
-        </div>
-        <footer>
-            <p>Copyright © 2020 &nbsp;
-                <a href = "https://github.com/SdtElectronics">
-                    <svg viewBox="0 0 16 16" version="1.1" width="24" aria-hidden="true">
-                        <path fill-rule="evenodd"
-                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
-                        </path>
-                    </svg>&nbsp;
-                    SdtElectronics
-                </a>
-            </p>
-            </br>
-            <a href = "https://github.com/SdtElectronics/Huffman-Code-Generator">Project Homepage</a>
-            &nbsp;&nbsp;
-            <a id = "abbtn">About</a>
-        </footer>
-    </div>
-    <div id = "aboutCont">
-        <div id = "about">
-            <h3>About</h3>
-            <hr/>
-            <p>Copyright © 2020 SdtElectronics</p>
-            <p>All Rights Reserved.</p>
-            <p>version: 0.0.1 alpha 0</p>
-            <p>Powered by WebAssembly and Emscripten.</p>
-            <img src = "res/magic.png"/>
-        </div>
-    </div>
+    
 </body> 
 
-<template id = "outRowTmpl">
-    <div id = "outRow" class = "orow">
-    </div>
-</template>
 
-<script async type="text/javascript" src="lib/HFC.js"></script>
-<script type="text/javascript" src="lib/wasmWrapper.es6"></script>
-<script type="text/javascript" src="main.es6"></script>
 </html>
